fix: move squiggle and add whitespace for text

--- a/src/renderer/components/Editor/Editor.css
+++ b/src/renderer/components/Editor/Editor.css
@@ -7,14 +7,15 @@
 
 @media screen and (max-width: 769px) {
   .TextEditor {
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
 
 .TextEditor {
   width: 100%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
   border: none;
@@ -23,11 +24,12 @@
 }
 
 .TextEditor p {
-  padding:0;
+  padding: 0;
   margin: 0;
 }
 .editor-height-tall {
-  height: calc(100vh - 126px);
+  height: calc(100vh - 160px);
+  margin-top: 44px;
 }
 
 .editor-height-short {
@@ -63,7 +65,7 @@
   /* theme.palette.secondary.contrastText */
   color: rgba(77, 77, 77, 0.6);
   cursor: pointer;
-  transition: background-color .1s ease;
+  transition: background-color 0.1s ease;
   border: none;
   border-radius: 50%;
   display: inline-flex;
@@ -77,23 +79,23 @@
 }
 
 .icon-button:hover {
-  background-color: rgba(255, 145, 175, .1);
+  background-color: rgba(255, 145, 175, 0.1);
 }
 
 .is-active {
-  transition: background-color .1s ease;
+  transition: background-color 0.1s ease;
   stroke: rgb(255, 145, 175);
   stroke-width: 1px;
   color: rgb(255, 145, 175);
 }
 
 .MuiTooltip-tooltip {
-  background-color: #FFA4B9 !important;
+  background-color: #ffa4b9 !important;
   border-radius: 5px !important;
   margin-top: 10px !important;
   margin-bottom: 6px !important;
 }
 
 .MuiTooltip-arrow {
-  color: #FFA4B9 !important;
+  color: #ffa4b9 !important;
 }
